Re-enable bazel's `--test_verbose_timeout_warnings` (#174)
Specify `timeout` on a few tests, and make the default for my macros use
`timeout=short` rather than the default (5 minutes), there is one
warning remaining for `//:requirements_test`, but it's quite variable,
so leaving it alone.

--- a/examples/bazel/BUILD
+++ b/examples/bazel/BUILD
@@ -130,6 +130,7 @@ platform_data(
 # Prove this is working as expected (changing prefix)
 sh_test(
     name = "cat_bin1_pure_test",
+    timeout = "short",
     srcs = ["check_equality.sh"],
     args = [
         "$(location :cat_bin1_pure)",
@@ -140,6 +141,7 @@ sh_test(
 
 sh_test(
     name = "cat_bin1_evil_test",
+    timeout = "short",
     srcs = ["check_equality.sh"],
     args = [
         "$(location :cat_bin1_evil)",
