--- a/requirements.in
+++ b/requirements.in
@@ -16,7 +16,10 @@ networkx[default]
 tabulate
 
 # largely for development
-pytest
+# https://github.com/pytest-dev/pytest/issues/12592#issuecomment-2515100428
+# introduced an issue with files named the same as their parent modules from
+# properly getting imported
+pytest<8.3.4
 black[jupyter]
 flake8
 isort
