lot going on, don't lose it'

--- a/apps/BUILD
+++ b/apps/BUILD
@@ -19,6 +19,26 @@ py_binary(
         "//tools:git_utils",
         "//utils:bep_reader",
         "//utils:graph_algorithms",
+        "@pip//bokeh",
         "@pip//networkx",
+        # XXX: Should associate with networkx
+        "@pip//pygraphviz",  # keep
+        "@pip//panel",
+    ],
+)
+
+# XXX: Example case of py_binary conflicting
+py_binary(
+    name = "example_bokeh",
+    srcs = ["example_bokeh.py"],
+    visibility = ["//:__subpackages__"],
+    deps = [
+        "@pip//bokeh",
+        "@pip//networkx",
+        "@pip//panel",
+        # XXX: I needed to install system clang to build the wheel, I likely
+        # should point elsewhere for hermeticity
+        # XXX: Should associate with networkx
+        "@pip//pygraphviz",  # keep
     ],
 )
