--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -40,7 +40,18 @@ pip.parse(
     hub_name = "pip",
     python_version = PYTHON_VERSION,
     requirements_lock = "//:requirements_lock.txt",
+    # Avoid building wheels with system compiler
+    # - pygraphviz
+    # download_only = True,
+    # Could put --extra-index-url here to grab my own wheels
+    # extra_pip_args = [],
 )
+# Could support multi-platform by specifying a different target for each
+# platform
+# --platform
+# --python-version
+# --implementation
+# --abi
 use_repo(pip, "pip")
 
 # TODO(#91): Allow bumping this up to 26 or greater while avoiding segfault
