--- a/requirements.in
+++ b/requirements.in
@@ -15,6 +15,10 @@ networkx[default]
 # Make nice-looking table output
 tabulate
 
+bokeh
+panel
+pygraphviz
+
 # largely for development
 pytest
 black[jupyter]
