--- a/.bazelrc
+++ b/.bazelrc
@@ -148,11 +148,11 @@ common --experimental_profile_include_primary_output
 # ==================
 # TODO(#95): Reconsider nativelink remote caching
 # TODO(#96): Consider only enabling BES for github jobs
-build --bes_results_url=https://app.buildbuddy.io/invocation/
-build --bes_backend=grpcs://remote.buildbuddy.io
-build --remote_cache=grpcs://remote.buildbuddy.io
-build --remote_download_toplevel # Helps remove network bottleneck if caching is enabled
-build --remote_timeout=3600
+common --bes_results_url=https://app.buildbuddy.io/invocation/
+common --bes_backend=grpcs://remote.buildbuddy.io
+common --remote_cache=grpcs://remote.buildbuddy.io
+common --remote_download_toplevel # Helps remove network bottleneck if caching is enabled
+common --remote_timeout=3600
 # Specify this in your user.bazelrc
 # build --remote_header=x-buildbuddy-api-key="$BUILDBUDDY_API_KEY"
 
