--- a/.github/actions/bazel-setup/action.yml
+++ b/.github/actions/bazel-setup/action.yml
@@ -14,7 +14,7 @@ runs:
         # Store build cache per workflow.
         disk-cache: true
         # Share repository cache between workflows.
-        # repository-cache: true
+        repository-cache: true
         # Enable external repositories cache
         # external-cache: true
         # - name: Cache Bazel
