It all seems to be working

--- a/.bazelrc
+++ b/.bazelrc
@@ -169,7 +169,8 @@ build:local --remote_cache=
 build --aspects //tools:aspects.bzl%mypy_aspect
 
 # optionally, default enable the mypy checks
-build --output_groups=+mypy
+# XXX:
+# build --output_groups=+mypy
 
 # Allow user to extend .bazelrc
 # https://bazel.build/configure/best-practices#bazelrc-file
