--- a/requirements.in
+++ b/requirements.in
@@ -4,41 +4,45 @@
 # bazel test //:gazelle_python_manifest.test //:requirements_test
 # Upgrade by
 # bazel run //:requirements.update -- --upgrade && bazel run //:gazelle_python_manifest.update
-beautifulsoup4
-grpcio
-mypy
-protobuf
-types-protobuf
-# Analyze graphs easily
-# https://networkx.org/documentation/stable/index.html
-networkx[default]
-# Make nice-looking table output
-tabulate
 
-# largely for development
-pytest
+
+
+beautifulsoup4
 black[jupyter]
 flake8
-isort
-ipdb
-notebook
-# Documentation
-sphinx
-sphinx-rtd-theme
-myst-parser
-# - generates links with raw urls, eg) www.example.com
-linkify-it-py
-# - diagram generation
-sphinxcontrib-mermaid
-# - python code (parse, not executing)
-sphinx-autoapi
-# - lots of miscellaneous plugins for sphinx
-sphinx-design
-sphinx-copybutton
-sphinxext-rediraffe
-sphinxext-opengraph
-sphinx-pyscript
-sphinx-tippy
-sphinx-togglebutton
 # A more modern sphinx theme
 furo
+grpcio
+ipdb
+isort
+# - generates links with raw urls, eg) www.example.com
+linkify-it-py
+mypy
+myst-parser
+# Analyze graphs easily https://networkx.org/documentation/stable/index.html
+networkx[default]
+notebook
+# Tool for running hardware-style tests
+openhtf
+protobuf
+pytest
+# - python code (parse, not executing)
+sphinx-autoapi
+# - diagram generation
+sphinxcontrib-mermaid
+sphinx-copybutton
+# - lots of miscellaneous plugins for sphinx
+sphinx-design
+# Documentation
+sphinx
+sphinxext-opengraph
+sphinxext-rediraffe
+sphinx-pyscript
+sphinx-rtd-theme
+sphinx-tippy
+sphinx-togglebutton
+# Make nice-looking table output
+tabulate
+# Convenient backend for openhtf
+tofupilot
+types-protobuf
