--- a/requirements.in
+++ b/requirements.in
@@ -22,6 +22,8 @@ networkx[default]
 notebook>=5,<6
 # Tool for running hardware-style tests; https://www.openhtf.com/
 openhtf
+# Undeclared dependency of openhtf
+six
 protobuf
 # largely for development
 # https://github.com/pytest-dev/pytest/issues/12592#issuecomment-2515100428
