Add a partial test

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -119,6 +119,7 @@ py_library(
 py_test(
     name = "git_utils_test",
     srcs = ["git_utils_test.py"],
+    deps = [":git_utils"],
 )
 
 proto_cc_library(
