--- a/tools/BUILD
+++ b/tools/BUILD
@@ -1,7 +1,10 @@
+load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")
+load("@build_stack_rules_proto//rules/cc:proto_cc_library.bzl", "proto_cc_library")
 load("@pip//:requirements.bzl", "requirement")  # '@pip' must match configured pip hub_name
 load("@rules_multirun//:defs.bzl", "command", "multirun")
 load("@rules_mypy//mypy:mypy.bzl", "mypy_cli")
-load("//bzl:py.bzl", "py_binary", "py_library")
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("//bzl:py.bzl", "proto_py_library", "py_binary", "py_library", "py_test")
 
 package(default_visibility = ["//visibility:private"])
 
@@ -98,4 +101,63 @@ mypy_cli(
     deps = [
         "@pip//types_protobuf",
     ],
+)
+
+proto_library(
+    name = "git_proto",
+    srcs = ["git.proto"],
+    deps = ["@com_google_protobuf//:timestamp_proto"],
+)
+
+py_library(
+    name = "git_utils",
+    srcs = ["git_utils.py"],
+    visibility = ["//:__subpackages__"],
+    deps = ["//tools:git_py_library"],
+)
+
+py_test(
+    name = "git_utils_test",
+    srcs = ["git_utils_test.py"],
+    deps = [":git_utils"],
+)
+
+proto_cc_library(
+    name = "git_cc_library",
+    srcs = ["git.pb.cc"],
+    hdrs = ["git.pb.h"],
+    visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf"],
+)
+
+proto_compile(
+    name = "git_cpp_compile",
+    outputs = [
+        "git.pb.cc",
+        "git.pb.h",
+    ],
+    plugins = ["@build_stack_rules_proto//plugin/builtin:cpp"],
+    proto = "git_proto",
+    visibility = ["//visibility:public"],
+)
+
+proto_compile(
+    name = "git_python_compile",
+    outputs = [
+        "git_pb2.py",
+        "git_pb2.pyi",
+    ],
+    plugins = [
+        "@build_stack_rules_proto//plugin/builtin:pyi",
+        "@build_stack_rules_proto//plugin/builtin:python",
+    ],
+    proto = "git_proto",
+    visibility = ["//visibility:public"],
+)
+
+proto_py_library(
+    name = "git_py_library",
+    srcs = ["git_pb2.py"],
+    visibility = ["//visibility:public"],
+    deps = ["@com_google_protobuf//:protobuf_python"],
 )
