--- a/packaging/BUILD
+++ b/packaging/BUILD
@@ -1,5 +1,6 @@
 load("//packaging:generated.bzl", "PYTHON_TARGETS")
 load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")
+load("@aspect_rules_py//py:defs.bzl", "py_venv")
 
 # https://rules-python.readthedocs.io/en/latest/api/rules_python/python/packaging.html#py_package
 py_package(
@@ -21,4 +22,13 @@ py_wheel(
     python_tag = "py3",
     version = "0.0.0",
     deps = [":py_package_all"],
+)
+
+py_venv(
+    name="py_venv_all",
+    # XXX: Add all requirements
+    deps = PYTHON_TARGETS,
+    # XXX: error, warning, ignore
+    # pick better / justify
+    package_collisions = "ignore",
 )
