We've got venv options

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -305,3 +305,11 @@ llvm.toolchain(
     },
 )
 use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")
+
+http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
+
+http_archive(
+    name = "rules_pyvenv",
+    strip_prefix = "rules_pyvenv-main",
+    url = "https://github.com/cedarai/rules_pyvenv/archive/main.tar.gz",
+)
