--- a/requirements.in
+++ b/requirements.in
@@ -18,8 +18,8 @@ mypy
 myst-parser
 # Analyze graphs easily https://networkx.org/documentation/stable/index.html
 networkx[default]
-# Required by openhtf's requirements of tornado
-notebook>=5,<6
+# XXX: Required by openhtf's requirements of tornado
+notebook
 # Tool for running hardware-style tests; https://www.openhtf.com/
 openhtf
 # Undeclared dependency of openhtf
