--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,18 +17,19 @@ force_single_line = true
 # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html
 line-length = 79
 target-version = ['py38']
-exclude = '''
+extend-exclude = '''
 (
   /(
     | \.git
     | \.mypy_cache
     | \.tox
     | \.venv
-    | \bazel-*
-    | \bazel-bin
-    | \bazel-genfiles
-    | \bazel-out
-    | \bazel-testlogs
+    | /venv
+    | bazel-*
+    | bazel-bin
+    | bazel-genfiles
+    | bazel-out
+    | bazel-testlogs
   )/
 )
 '''
