--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -51,10 +51,19 @@ pip.parse(
             # specify undeclared dependency on six
             "six",
         ],
+        "networkx": [
+            "networkx",
+            "pygraphviz",
+        ],
     },
     hub_name = "pip",
     python_version = PYTHON_VERSION,
     requirements_lock = "//:requirements_lock.txt",
+    # Avoid building wheels with system compiler
+    # - pygraphviz
+    # download_only = True,
+    # Could put --extra-index-url here to grab my own wheels
+    # extra_pip_args = [],
 )
 
 # Could support multi-platform by specifying a different target for each
