Get workers setup to use pygraphviz

--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -8,10 +8,12 @@ actions:
       pull_request:
         branches:
           - "*"
-    bazel_commands:
-      - 'build //...'
-      - 'test //...'
-      - 'coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous'
+    steps:
+      # TODO(#209): Don't require installing this
+      - run: 'sudo apt-get install -y graphviz graphviz-dev'
+      - run: 'build //...'
+      - run: 'test //...'
+      - run: 'coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous'
     resource_requests:
       # The default 20GB was too small
       disk: 40GB
