--- a/tools/flake8/BUILD
+++ b/tools/flake8/BUILD
@@ -1,17 +1,15 @@
-load("//bzl:py.bzl", "py_binary")
+# https://rules-python.readthedocs.io/en/latest/api/rules_python/python/entry_points/py_console_script_binary.html
+load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
 
 package(default_visibility = ["//visibility:private"])
 
-py_binary(
+# Call with "-- `pwd`" may be the ticket?
+py_console_script_binary(
     name = "flake8",
-    srcs = ["flake8.py"],
     data = ["//:.flake8"],
+    pkg = "@pip//flake8",
     tags = [
         "no-mypy",
     ],
     visibility = ["//:__subpackages__"],
-    deps = [
-        "//tools:utils",
-        "@pip//flake8",
-    ],
 )
