--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -1,6 +1,6 @@
 actions:
   - name: "Build and Test all targets"
-    container_image: "ubuntu-20.04"
+    container_image: "ubuntu-22.04"
     triggers:
       push:
         branches:
@@ -10,7 +10,7 @@ actions:
           - "*"
     steps:
       # TODO(#209): Don't require installing this
-      - run: 'sudo apt-get install -y graphviz graphviz-dev'
+      - run: 'sudo apt-get update && sudo apt-get install -y graphviz graphviz-dev'
       - run: 'build //...'
       - run: 'test //...'
       - run: 'coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous'
