--- a/buildbuddy.yaml
+++ b/buildbuddy.yaml
@@ -11,9 +11,9 @@ actions:
     steps:
       # TODO(#209): Don't require installing this
       - run: 'sudo apt-get update && sudo apt-get install -y graphviz graphviz-dev'
-      - run: 'build //...'
-      - run: 'test //...'
-      - run: 'coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous'
+      - run: 'bazel build //...'
+      - run: 'bazel test //...'
+      - run: 'bazel coverage //... --combined_report=lcov --instrument_test_targets --instrumentation_filter="^//" --test_size_filters=-enormous'
     resource_requests:
       # The default 20GB was too small
       disk: 40GB
