--- a/requirements.in
+++ b/requirements.in
@@ -6,12 +6,16 @@
 # bazel run //:requirements.update -- --upgrade && bazel run //:gazelle_python_manifest.update
 
 black[jupyter]
+bokeh
 flake8
 # A more modern sphinx theme
 furo
 grpcio
 ipdb
 isort
+# https://jupytext.readthedocs.io/en/stable/index.html
+# Source control jupyter notebooks by pairing with an ingnored .ipynb file.
+jupytext
 # - generates links with raw urls, eg) www.example.com
 linkify-it-py
 mypy
@@ -22,6 +26,8 @@ networkx[default]
 notebook
 # Tool for running hardware-style tests; https://www.openhtf.com/
 openhtf
+panel
+pygraphviz
 # Undeclared dependency of openhtf
 six
 # Install so we can easily install a wheel into a virtualenv
@@ -34,21 +40,22 @@ protobuf
 pytest<8.3.4
 # https://github.com/bazelbuild/bazel/issues/4327
 setuptools<71
-# - python code (parse, not executing)
-sphinx-autoapi
-# - diagram generation
-sphinxcontrib-mermaid
-sphinx-copybutton
-# - lots of miscellaneous plugins for sphinx
-sphinx-design
 # Documentation
 sphinx
-sphinxext-opengraph
-sphinxext-rediraffe
+# - python code (parse, not executing)
+sphinx-autoapi
+sphinx-copybutton
 sphinx-pyscript
 sphinx-rtd-theme
 sphinx-tippy
 sphinx-togglebutton
+# - lots of miscellaneous plugins for sphinx
+sphinx-design
+# - diagram generation
+sphinxcontrib-mermaid
+# Documentation
+sphinxext-opengraph
+sphinxext-rediraffe
 # Make nice-looking table output
 tabulate
 # Convenient backend for openhtf; https://www.tofupilot.com/
