Follow jupytext suggestion
- https://jupytext.readthedocs.io/en/latest/#sample-use-cases
- global configuration to pair
- only work with `.py` files
- exclude `.ipynb` files from version control

- I may want to experiment with the format a bit, as I don't really like
  how everything is there, without a main() wrapper. I also likely won't
  want gazelle creating targets for these.
- I may not want to just leave these in a separate `notebooks/`
  directory

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,8 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+# jupytext preserves these with their paired .py notebooks
+*.ipynb
 
 # pyenv
 .python-version
