--- a/requirements.in
+++ b/requirements.in
@@ -26,7 +26,7 @@ networkx[default]
 notebook
 # Tool for running hardware-style tests; https://www.openhtf.com/
 openhtf
-panel
+panel>=1.6.1
 pygraphviz
 # Undeclared dependency of openhtf
 six
