--- a/utils/BUILD
+++ b/utils/BUILD
@@ -24,8 +24,10 @@ py_binary(
     visibility = ["//:__subpackages__"],
     deps = [
         "//third_party/bazel/proto:build_event_stream_py_library",
+        "//third_party/bazel/proto:spawn_py_library",
         "//third_party/delimited_protobuf",
         "@pip//tabulate",
+        "@pip//zstandard",
     ],
 )
 
